--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       </tbody>
     </table>
     <button id="back-to-home-btn">Back to Home</button>
+    <button id="reset-leaderboard-btn">Reset Leaderboard</button> <!-- Reset leaderboard button inside leaderboard section -->
   </div>
 
   <script src="script.js"></script>
